--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,8 @@
   .Header
     .Header-logo
       = link_to root_path do
-        COMPANY LOGO
+        .Header-logo__image
+          = image_tag 'haken logo.png', class: "Header-logo__image--pic"
     .Header-right
       - if user_signed_in?
         .Header-right__img
@@ -20,18 +21,22 @@
           = link_to jobs_path do
             .Header-right__company--building
               = icon('far', 'building')
+              企業担当者はこちら
         .Header-right__logout
           = link_to destroy_user_session_path, method: :delete do
             .Header-right__logout--sign-out-alt
               = icon('fas', 'sign-out-alt')
+              サインアウト
       - else
         .Header-right__company
           = link_to jobs_path do
             .Header-right__company--building
               = icon('far', 'building')
+              企業担当者はこちら
         .Header-right__signup
           = link_to new_user_registration_path do
             .Header-right__signup--sign-in-alt
               = icon('fas', 'sign-in-alt')
+              サインイン
   = yield
   .Footer
