--- a/app/assets/stylesheets/modules/_job_show.scss
+++ b/app/assets/stylesheets/modules/_job_show.scss
@@ -66,7 +66,7 @@
       display:grid;
       grid-gap: 1rem;
       // height: 300px;
-      grid-template-columns: 2fr 1fr 1fr;
+      grid-template-columns: 1.3fr 1fr;
       &__list1 {
         background-color: gray;
         grid-row: 1 / span 2;
