--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -9,19 +9,20 @@
 }
 
 .Top-wrapper {
-  background-color: rebeccapurple;
+  // background-color: rebeccapurple;
   position: relative;
   padding: 5px;
   .Top-images {
       display:grid;
       grid-gap: 1rem;
-      grid-template-columns: 1.5fr 1fr 1fr;
+      grid-template-columns: 2fr 1fr 1fr;
       &__image1 {
         background-color: gray;
         grid-row: 1 / span 2;
         height: 400px;
         &--img {            //実際の画像をいれる//
-          height: 100%;
+          border-radius: 10px;
+          height: 400px;
           object-fit: cover;
           width: 100%;
         }
@@ -29,9 +30,26 @@
       &__image2 {
         grid-column:2 /span 2 ;
         background-color: gray;
+        height: 180px;
+        &--img {            //実際の画像をいれる//
+          height: 180px;
+          object-fit: cover;
+          width: 100%;
+          border-radius: 10px;
+
+
+        }
       }
       &__image {
         background-color: gray;
+        height: 204px;
+         &--img {            //実際の画像をいれる//
+          height: 204px;
+          object-fit: cover;
+          width: 100%;
+          border-radius: 10px;
+
+        }
       }
     }
   .Top-login{
