--- a/app/views/matches/_job_matches.html.haml
+++ b/app/views/matches/_job_matches.html.haml
@@ -2,15 +2,13 @@
   .Top-wrapper
     %ul.Top-images
       %li.Top-images__image1
-        1
+        = image_tag 'top1.jpg', class: 'Top-images__image1--img'
       %li.Top-images__image2
-        2
+        = image_tag 'top2.jpg', class: 'Top-images__image2--img'
+      %li.Top-images__image  
+        = image_tag 'top3.jpg', class: 'Top-images__image--img'
       %li.Top-images__image
-        3
-      %li.Top-images__image
-        4
-      -# %li.Top-images__image
-      -#   5
+        = image_tag 'top4.jpg', class: 'Top-images__image--img'
     .Top-login
       = link_to user_session_path, class: 'Top-login__text' do
         Login
