--- a/app/assets/stylesheets/modules/_job_show.scss
+++ b/app/assets/stylesheets/modules/_job_show.scss
@@ -83,7 +83,6 @@
         border-radius: 10px;
         background-color: gray;
         height: 142px;
-        // width: ;
       }
     }
   }
@@ -122,7 +121,8 @@
 .Review-wrapper {
   margin-top: 30px;
   &__title {
-    background-color: lightgoldenrodyellow;
+    // background-color: lightgoldenrodyellow;
+    border-bottom: 1px solid lightgray;
     height: 300px;
     overflow: scroll;
   }
@@ -141,15 +141,16 @@
     height: 300px;
     padding: 15px;
     background-color: linen;
+    border: 1px solid lightgray;
+    border-radius: 10px;
   }
 }
 
 .Review-post {
   padding: 10px;
-  background-color:linen;
+  // background-color: lightgray;
 }
 .Review-box {
-  // background-color: oldlace;
   &__good {
   }
   &__text {
@@ -172,6 +173,8 @@
 
 .Review-wrapper__list {
   overflow: slide;
+  border: 1px solid lightgray;
+  margin-bottom: 5px;
   .Review-top {
     display: flex;
     justify-content: space-between;
@@ -204,13 +207,11 @@
 }
   
 .Review-infomation {
-  // border: 1px solid lightsteelblue;
   border-radius: 10px;
   display: flex;
   margin-top: 10px;
   &__left {
     padding: 10px;
-    // background-color: mediumaquamarine;
     width: 90%;
     &--text {
       height: 60px;
