--- a/app/views/matches/_job_show.html.haml
+++ b/app/views/matches/_job_show.html.haml
@@ -120,8 +120,7 @@
     .Review-wrapper__up
       = image_tag 'image.png', class: 'Review-wrapper__up--image'
     .Review-wrapper__review
-      感想を教えて！
-    
+      感想を書く
     =form_with model: [match, review], id: "new-comment", local: true do |form|
       .Review-wrapper__form
         .Review-post
