--- a/app/views/matches/_job_matches.html.haml
+++ b/app/views/matches/_job_matches.html.haml
@@ -70,10 +70,10 @@
               .Job-catch__box
                 .Job-catch__box--star
                   -if current_user.already_favorited?(match) 
-                    = link_to job_favorites_path(match), method: :delete do
+                    = link_to job_favorites_path(match), method: :delete, remote: true do
                       = icon('fas', 'star', class: "Job-catch__box--star--color")
                   - else
-                    = link_to job_favorites_path(match), method: :post do
+                    = link_to job_favorites_path(match), method: :post, remote: true do
                       = icon('far', 'star')
                 .Job-catch__box--text
                   気になる!
