--- a/app/views/favorites/destroy.js.haml
+++ b/app/views/favorites/destroy.js.haml
@@ -1,1 +1,1 @@
--# $('.btn-box').html("#{escape_javascript(render partial: "items/favorite_ajax", locals: { item: @item })}");
+$('.btn-box').html("#{escape_javascript(render partial: "items/favorite_ajax", locals: { item: @item })}");
