--- a/app/views/favorites/create.js.haml
+++ b/app/views/favorites/create.js.haml
@@ -1,1 +1,1 @@
-$('.Job-catch__box--star').html("#{escape_javascript(render partial: "matches/favorite_ajax", locals: { match: match })}");
+$('.Job-catch__box--star').html("#{escape_javascript(render partial: "matches/favorite_ajax", locals: { match: @match })}");
