--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,9 +6,9 @@
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
-    %link{ rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" }
+    %link{ rel:"stylesheet", type:"text/css", href:"//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" }
     = javascript_include_tag 'application'
-    %script{ type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" }
+    %script{ type:"text/javascript", src:"//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" }
   %body
   .Header
     .Header-logo
