--- a/app/views/matches/_job_matches.html.haml
+++ b/app/views/matches/_job_matches.html.haml
@@ -1,6 +1,6 @@
 .Wrapper-match
   .Top-wrapper
-    %ul.Top-images.slider
+    %ul.Top-images
       %li.Top-images__image1
         = image_tag 'top1.jpg', class: 'Top-images__image1--img'
       %li.Top-images__image2
