--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,3 +8,5 @@
 @import "modules/user";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "slick-theme.scss";
+@import "slick.scss";
