--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -9,48 +9,44 @@
 }
 
 .Top-wrapper {
-  position: relative;
   padding: 5px;
-  .Top-images {
-      display:grid;
-      grid-gap: 1rem;
-      grid-template-columns: 2fr 1fr 1fr;
-      &__image1 {
-        // background-color: gray;
-        grid-row: 1 / span 2;
-        height: 400px;
-        &--img {            //実際の画像をいれる//
-          border-radius: 10px;
-          height: 400px;
-          object-fit: cover;
-          width: 100%;
-        }
-      }
-      &__image2 {
-        grid-column:2 /span 2 ;
-        // background-color: gray;
-        height: 180px;
-        &--img {            //実際の画像をいれる//
-          height: 180px;
-          object-fit: cover;
-          width: 100%;
-          border-radius: 10px;
-
-
-        }
-      }
-      &__image {
-        // background-color: gray;
-        height: 204px;
-         &--img {            //実際の画像をいれる//
-          height: 204px;
-          object-fit: cover;
-          width: 100%;
-          border-radius: 10px;
-
-        }
-      }
-    }
+  .slider {
+    max-width: 100%;
+    height: 450px;
+  }
+  .slick-slide img {
+    width: 100%;
+    height: 450px;
+    object-fit: cover;
+    border-radius: 10px;
+    
+  }
+  .slick-prev, .slick-next {
+    z-index: 1;
+  }
+  .slick-prev:before, .slick-next:before {
+      color: #000;
+  }
+  .slick-slide {
+      transition: all ease-in-out .3s;
+      opacity: .2;
+  }
+  .slick-active {
+      opacity: 1;
+  }
+  .slick-current {
+      opacity: 1;
+  }
+  .thumb {
+      margin: 20px 0 0;
+  }
+  .thumb .slick-slide {
+      cursor: pointer;
+  }
+  .thumb .slick-slide:hover {
+      opacity: .7;
+  }
+ 
   .Top-login{
     position: absolute;
     top:50%;
