Add code at matches_controller.rb and job_matches.html.haml

--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -122,7 +122,7 @@
       }
     }
     &__middle {
-      overflow-y: scroll;
+      // overflow-y: scroll;
       height: 1000px;
       // background-color: lightblue;
     }
