--- a/app/views/matches/_job_matches.html.haml
+++ b/app/views/matches/_job_matches.html.haml
@@ -54,8 +54,7 @@
         .Bar-left__upper--title
           応募可能な全てのお仕事を公開しています
         .Bar-left__upper--text
-          - @matches.each do |match|
-            = match.content
+          = paginate matches
       .Bar-left__middle
         - matches.each do |match|
           .Job-box
