--- a/app/views/matches/index.html.haml
+++ b/app/views/matches/index.html.haml
@@ -1,1 +1,1 @@
-= render partial: 'job_matches', locals: { matches: @matches }
+= render partial: 'job_matches', locals: { matches: @matches, pages: @pages }
