--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -134,6 +134,9 @@
   border: 1px solid gainsboro;
   border-radius: 5px;
   padding: 10px;
+  postion: -webkit-sticky;
+  position: sticky;
+  top: 0;
   }
 }
 
