--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,11 +5,13 @@
     %title DispatchSite
     = csrf_meta_tags
     = csp_meta_tag
+    %link{ rel:"stylesheet", href:"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" }
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     %link{ rel:"stylesheet", type:"text/css", href:"//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" }
     %link{ rel:"stylesheet", type:"text/css", href:"//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" }
     = javascript_include_tag 'application'
     %script{ type:"text/javascript", src:"//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" }
+    %script{ src:"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" }
   %body
   .Header
     .Header-logo
