--- a/app/views/matches/_job_show.html.haml
+++ b/app/views/matches/_job_show.html.haml
@@ -32,10 +32,7 @@
             = image_tag match.image2.url, class: 'Job-images__list1--img' if match.image2.present?
           %li.Job-images__list
             = image_tag match.image3.url, class: 'Job-images__list1--img' if match.image3.present?
-          -# %li.Job-images__list
-          -#   = image_tag match.image4.url, class: 'Job-images__list1--img' if match.image4.present?
-          -# %li.Job-images__list
-          -#   = image_tag match.image5.url, class: 'Job-images__list1--img' if match.image5.present?
+
       .Vacancy-contents
         %table.Vacancy-infos
           %tr.Vacancy-item
@@ -117,19 +114,40 @@
                   = link_to job_review_path(review.job.id, review.id), method: :delete do
                     =icon('far','trash-alt', class: 'Review-infomation__right--trash')
 
-    .Review-wrapper__up
-      = image_tag 'image.png', class: 'Review-wrapper__up--image'
-    .Review-wrapper__review
-      感想を書く
-    =form_with model: [match, review], id: "new-comment", local: true do |form|
-      .Review-wrapper__form
-        .Review-post
-          .Review-box
-            .Review-box__good
-              【よかった点】
-            = form.text_area :good, maxlength: 250, class: 'Review-box__text', placeholder: 'ここに文章を入力してください'
-            .Review-box__bad
-              【わるかった点】
-            = form.text_area :bad, maxlength: 250, class: 'Review-box__text', placeholder: 'ここに文章を入力してください'
-      .Review-button
-        = form.submit '投稿する', class: 'Review-button__submit'
+    -# .Review-wrapper__up
+    -#   = image_tag 'image.png', class: 'Review-wrapper__up--image'
+
+  .container.text-center
+  %button.btn.btn-primary.mt-5{"data-target" => "#post", "data-toggle" => "modal", :type => "button"} つぶやきを投稿する
+  #post.modal.fade{"aria-hidden" => "true", :role => "dialog", :tabindex => "-1"}
+    .modal-dialog{:role => "document"}
+      .modal-content
+        .Review-wrapper__review
+        感想を書く
+        =form_with model: [match, review], id: "new-comment", local: true do |form|
+          .Review-wrapper__form
+            .Review-post
+              .Review-box
+                .Review-box__good
+                  【よかった点】
+                = form.text_area :good, maxlength: 250, class: 'Review-box__text', placeholder: 'ここに文章を入力してください'
+                .Review-box__bad
+                  【わるかった点】
+                = form.text_area :bad, maxlength: 250, class: 'Review-box__text', placeholder: 'ここに文章を入力してください'
+          .Review-button
+            = form.submit '投稿する', class: 'Review-button__submit'
+          .modal-footer
+            %button.btn.btn-secondary{"data-dismiss" => "modal", :type => "button"} 閉じる
+            %button.btn.btn-primary{:type => "button"} 投稿する
+            
+      -# .Review-wrapper__form
+      -#   .Review-post
+      -#     .Review-box
+      -#       .Review-box__good
+      -#         【よかった点】
+      -#       = form.text_area :good, maxlength: 250, class: 'Review-box__text', placeholder: 'ここに文章を入力してください'
+      -#       .Review-box__bad
+      -#         【わるかった点】
+      -#       = form.text_area :bad, maxlength: 250, class: 'Review-box__text', placeholder: 'ここに文章を入力してください'
+      -# .Review-button
+      -#   = form.submit '投稿する', class: 'Review-button__submit'
