--- a/app/assets/stylesheets/modules/_job_show.scss
+++ b/app/assets/stylesheets/modules/_job_show.scss
@@ -45,85 +45,98 @@
     border-bottom: 1px solid burlywood;
   }
 }
-  .Pr-contents {
-    background-color: lemonchiffon;
-    border-radius: 5px;
-    margin-top: 10px;
-    .Pr-title {
-      padding: 5px 5px;
-      color: red;
-    }
-    .Pr-box {
-      padding: 5px 20px;
-      &__text {
+.Pr-contents {
+  background-color: lemonchiffon;
+  border-radius: 5px;
+  margin-top: 10px;
+  .Pr-title {
+    padding: 5px 5px;
+    color: red;
+  }
+  .Pr-box {
+    padding: 5px 20px;
+    &__text {
 
-      }
     }
   }
-  .Image-contents {
-    margin-top: 10px;
-    .Job-images {
-      display:grid;
-      grid-gap: 1rem;
-      // height: 300px;
-      grid-template-columns: 1.3fr 1fr;
-      &__list1 {
-        background-color: gray;
-        grid-row: 1 / span 2;
-        grid-column: 1.5 / span 2;
-        height: 300px;
-        &--img {
-          border-radius: 10px;
-          height: 100%;
-          object-fit: cover;
-          width: 100%;
-        }
-      }
-      &__list {
+}
+.Image-contents {
+  margin-top: 10px;
+  .Job-images {
+    display:grid;
+    grid-gap: 1rem;
+    // height: 300px;
+    grid-template-columns: 1.3fr 1fr;
+    &__list1 {
+      background-color: gray;
+      grid-row: 1 / span 2;
+      grid-column: 1.5 / span 2;
+      height: 300px;
+      &--img {
         border-radius: 10px;
-        background-color: gray;
-        height: 142px;
+        height: 100%;
+        object-fit: cover;
+        width: 100%;
       }
+    }
+    &__list {
+      border-radius: 10px;
+      background-color: gray;
+      height: 142px;
     }
   }
-  .Vacancy-contents {
-    margin-top: 10px;
-    .Vacancy-infos {
-      width:100%;
-      .Vacancy-item {
-        height: 50px;
-        border: 1px solid lightslategrey;
-        &__left {
-          width: 25%;
-          padding-left: 10px;
-          background-color: lightsteelblue;
-        }
-        &__right {
-          width: 75%;
-          padding-left: 10px;
-        }
-      }
+}
+
+.Vacancy-contents {
+  margin-top: 10px;
+}
+
+.Vacancy-infos {
+  width:100%;
+  .Vacancy-item {
+    height: 50px;
+    border: 1px solid lightslategrey;
+    &__left {
+      width: 25%;
+      padding-left: 10px;
+      background-color: lightsteelblue;
     }
-    .Question-contents {
-      margin-top: 10px;
-      &__box {
-        margin: 0 auto;
-        width: 200px;
-        height: 50px;
-        text-align: center;
-        &--btn {
-          line-height: 50px;
-         }
-      }
+    &__right {
+      width: 75%;
+      padding-left: 10px;
     }
   }
+}
+
+.Question-contents {
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-evenly;
+  &__box {
+    width: 350px;
+    height: 50px;
+    margin: 0 10px;
+    border: none;
+    margin: 0 5px;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    &--red {
+      color:lightcoral;
+    }
+    &--blue {
+      color: skyblue;
+    }
+  }
+}
 
 .Review-wrapper {
   margin-top: 30px;
   &__title {
     // background-color: lightgoldenrodyellow;
+    height: 600px;
     border-bottom: 1px solid lightgray;
-    height: 300px;
     overflow: scroll;
   }
   &__list {
@@ -138,12 +151,11 @@
     }
   }
   &__form {
-    height: 300px;
+    height: 350px;
     padding: 15px;
-    background-color: linen;
+    background-color: white;
     border: 1px solid lightgray;
     border-radius: 10px;
-    margin-top: 30px;
   }
 }
 
@@ -152,7 +164,8 @@
   // background-color: lightgray;
 }
 .Review-box {
-  &__good {
+  &__good, &__bad {
+    margin-bottom: 5px;
   }
   &__text {
     width: 100%;
@@ -164,10 +177,17 @@
 
 .Review-button {
   width: 100%;
-  text-align: center;
+  text-align: right;
   margin-top: 10px;
   &__submit {
-    padding: 3px;
+    width: 80px;
+    height: 40px;
+    border: none;
+    margin: 0 5px;
+    border-radius: 5px;
+    color: white;
+    background-color: skyblue;
+    font-weight: bold;
   }
 }
 
