--- a/app/views/matches/_job_matches.html.haml
+++ b/app/views/matches/_job_matches.html.haml
@@ -106,3 +106,6 @@
           = form_with url: search_matches_path, local: true, method: :get do |form|
             = form.text_field :keyword, class: 'Search-box__input', placeholder: '仕事を検索する'
             = form.submit '検索', class: 'Search-box__button'
+      #page-top
+        %a{:href => "#wrap"} 
+          = icon('fas', 'chevron-circle-up',class: "page-icon")
