--- a/app/views/matches/_job_matches.html.haml
+++ b/app/views/matches/_job_matches.html.haml
@@ -65,16 +65,11 @@
                 job.no eeeeeeee
             .Job-catch
               .Job-catch__textarea
-                .Job-catch__textarea--text
+                .Job-catch__textarea--text  
                   =match.title
               .Job-catch__box
                 .Job-catch__box--star
-                  -if current_user.already_favorited?(match) 
-                    = link_to job_favorites_path(match), method: :delete do
-                      = icon('fas', 'star', class: "Job-catch__box--star--color")
-                  - else
-                    = link_to job_favorites_path(match), method: :post do
-                      = icon('far', 'star')
+                  = render partial: "favorite", locals: { match: match }
                 .Job-catch__box--text
                   気になる!
                   -# = match.favorites.count
