--- a/app/assets/stylesheets/modules/_Header.scss
+++ b/app/assets/stylesheets/modules/_Header.scss
@@ -36,18 +36,18 @@ b* {
     width: 100%;
     }
   }
-  &__company {
-    font-size: 13px;
-    &--icon {
-      text-decoration: none;
-      color: black;
-    }
-  }
+
   &__devise {
+    padding: 0 5px;
     font-size: 13px;
-    &--icon {
-      text-decoration: none;
+    cursor: pointer;
+    line-height: 50px;
+    border-radius: 10px;
+    display: flex;
+    &--icon,&__text {
       color: black;
+      text-decoration: none;
+      padding: 0 5px;
     }
   }
 }
