--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,26 +22,31 @@
       - if user_signed_in?
         .Header-right__img
           = image_tag current_user.image.to_s, class: 'Header-right__img--file'
-        .Header-right__company
-          = link_to jobs_path, class: "Header-right__company--icon" do
+        .Header-right__devise
+          = link_to jobs_path, class: "Header-right__devise--icon" do
             = icon('far', 'building')
+          .Header-right__devise-text
             企業担当者はこちら
         .Header-right__devise
           = link_to destroy_user_session_path, class:"Header-right__devise--icon", method: :delete do
             = icon('fas', 'sign-out-alt')
+          .Header-right__devise-text
             サインアウト
       - else
-        .Header-right__company
-          = link_to jobs_path, class: "Header-right__company--icon" do
+        .Header-right__devise
+          = link_to jobs_path, class: "Header-right__devise--icon" do
             = icon('far', 'building')
+            .Header-right__devise-text
             企業担当者はこちら
         .Header-right__devise
           = link_to user_session_path, class:"Header-right__devise--icon" do
             = icon('fas', 'user')
+            .Header-right__devise-text
             ログイン
         .Header-right__devise
           = link_to new_user_registration_path, class:"Header-right__devise--icon" do
             = icon('fas', 'sign-in-alt')
+            .Header-right__devise-text
             サインイン
   = yield
   .Footer
