--- a/app/assets/stylesheets/modules/_Header.scss
+++ b/app/assets/stylesheets/modules/_Header.scss
@@ -44,7 +44,7 @@ b* {
     line-height: 50px;
     border-radius: 10px;
     display: flex;
-    &--icon,&__text {
+    &--icon,&--text {
       color: black;
       text-decoration: none;
       padding: 0 5px;
