--- a/app/assets/stylesheets/modules/_job_show.scss
+++ b/app/assets/stylesheets/modules/_job_show.scss
@@ -122,6 +122,7 @@
     color: white;
     font-weight: bold;
     font-size: 18px;
+    text-decoration: none;
     &--red {
       color:lightcoral;
     }
