Create scss file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import "modules/Footer";
 @import "modules/edit";
 @import "modules/user";
+@import "modules/contacts_new";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "slick-theme.scss";
