Add haml scss at products

--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -1,1 +1,27 @@
-これでいいのか？
+.Contact-wrapper
+  %form.Form
+    = form_with url: "#" , local: true do |form|
+      .Contact-title
+        お問い合わせ
+      .Contact-message
+        下記のフォームに必要事項を記載し、内容をご確認の上、送信ボタンをくクリックしてください。
+        %br/
+        弊社より改めてご連絡申し上げます。
+      .Contact-item
+        .Contact-item__left
+          お名前（必須）
+        .Contact-item__right
+          必須
+        = form.text_field :title, class: '#', placeholder: '◎◎'
+      .Contact-item
+        .Contact-item__left
+          メールアドレス
+        .Contact-item__right
+          必須
+        = form.text_field :title, class: '#', placeholder: '◎◎'
+      .Contact-item
+        お問い合わせ内容
+        .Contact-item__left
+          = form.text_area :title, class: '#', placeholder: '◎◎'
+      .Contact-btn
+        = form.submit '問合せを送信する', class: '#'
